# playoff_predictor

./: prediction_check.ipynb  production_model.model  pyproject.toml  run_pipeline.py
data_ingestion/: ingest.py
data_ingestion/data/: FullData.rds  modeling_df.rds
mlruns/0/: meta.yaml
mlruns/819829235098728476/: meta.yaml
mlruns/819829235098728476/1753a9fcd8914390865b05fdc5b26293/: meta.yaml
mlruns/819829235098728476/2bc9bfda4c304eb9aa6a3dadfea445bb/: meta.yaml
mlruns/819829235098728476/82011b3808744ec899ecbbb29fc6d979/: meta.yaml
mlruns/819829235098728476/8a094c88331f448d90d0d938a818bc5b/: meta.yaml
mlruns/819829235098728476/a963b28787af4d17bc0206df39f2370e/: meta.yaml
mlruns/819829235098728476/e19d62e83a264edf93b286d22d0aa735/: meta.yaml
mlruns/850662380109387167/: meta.yaml
mlruns/850662380109387167/0ea997c299cf443e9b648c306ca9be99/: meta.yaml
mlruns/850662380109387167/11e4d50dd8944bf39c7fa07730b111f5/: meta.yaml
model_evaluation/: evaluate.py
model_evaluation/data/: X.pkl  best_grid.pkl  best_group_scores.pkl  eval_model_df.pkl  feature_importances.pkl  model_df.pkl  monotonic_constraints.pkl  plot_prediction_set.pkl  prediction_set.pkl  results.pkl  run_data.pkl  season_context.pkl  select_features.pkl  test_X.pkl  test_groups.pkl  test_sw.pkl  test_y.pkl  train_X.pkl  train_groups.pkl  train_sw.pkl  train_y.pkl  y.pkl
model_training/: train.py
model_training/data/: model_df.pkl  monotonic_constraints.pkl  prediction_set.pkl  season_context.pkl  select_features.pkl
playoff_predictor/: pyproject.toml
(+172 files in other folders)
