[project]
name = "playoff-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "SethTheDataScientist",email = "seth.lanza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyreadr (>=0.5.3,<0.6.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "shap (>=0.47.2,<0.48.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
